Changed ssldomain to altdomain (to achieve more flexibility)

--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -19,7 +19,7 @@ ENV USER_ID="99" \
     SERVER="fr5-0" \
     NETWORK_DEVICE="eth0" \
     PORT="8180" \
-    SSL_DOMAIN="empty" \
+    ALT_DOMAIN="empty" \
     SERVER_PIN="empty" \
     FFMPEG_HOST_LOCATION="/usr/bin/ffmpeg" \
     PLATFORM="hls5" \
