--- a/Dockerfile.arm64v8
+++ b/Dockerfile.arm64v8
@@ -19,7 +19,7 @@ ENV USER_ID="99" \
     SERVER="fr5-0" \
     NETWORK_DEVICE="eth0" \
     PORT="8180" \
-    SSL_DOMAIN="" \
+    ALT_DOMAIN="" \
     SERVER_PIN="" \
     FFMPEG_HOST_LOCATION="/usr/bin/ffmpeg" \
     PLATFORM="hls5" \
